[gd_scene load_steps=14 format=3 uid="uid://csceag70sbadm"]

[ext_resource type="Texture2D" uid="uid://de6vs07lfe30k" path="res://textures/player_texture.png" id="1_7kgtu"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_mtavl"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="2_lpb50"]
[ext_resource type="PackedScene" uid="uid://b1jw12natrmvo" path="res://scenes/canvas_ui/healthBar.tscn" id="3_0mpwd"]
[ext_resource type="PackedScene" uid="uid://bqev6quu0buwh" path="res://scenes/utils/trail_2d.tscn" id="3_2c1u8"]
[ext_resource type="PackedScene" uid="uid://bfsjym2svavnd" path="res://scenes/menu_scenes/pause_menu.tscn" id="5_2dexs"]
[ext_resource type="PackedScene" uid="uid://8rdpyfdcv1su" path="res://scenes/menu_scenes/finish_level_scene.tscn" id="6_jwd15"]
[ext_resource type="PackedScene" uid="uid://b42owupk1jg6p" path="res://scenes/menu_scenes/fail_level_scene.tscn" id="7_n76cv"]
[ext_resource type="Script" path="res://scripts/StartTime.gd" id="9_708a0"]
[ext_resource type="AudioStream" uid="uid://dfhjbqwqg1cxv" path="res://sound/wind_movement.ogg" id="10_hhoad"]

[sub_resource type="SystemFont" id="SystemFont_f3nvp"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_ce31e"]
radius = 29.4551

[sub_resource type="CircleShape2D" id="CircleShape2D_0g4sr"]
radius = 31.4286

[node name="player" type="CharacterBody2D"]
scale = Vector2(0.35, 0.35)
input_pickable = true
script = ExtResource("1_mtavl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("3_0mpwd")]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 55.0

[node name="TimeCounter" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 57.0
offset_right = 60.0
offset_bottom = 119.0
theme_override_fonts/font = SubResource("SystemFont_f3nvp")
theme_override_font_sizes/font_size = 50

[node name="DamageTaken" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -82.0
offset_right = 60.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_f3nvp")
theme_override_font_sizes/font_size = 50
text = "Damage Taken: "

[node name="Start" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -31.0
offset_right = 159.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_f3nvp")
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_2dexs")]

[node name="FinishLevelScene" parent="CanvasLayer" instance=ExtResource("6_jwd15")]

[node name="FailLevelScene" parent="CanvasLayer" instance=ExtResource("7_n76cv")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-3.06878, 0)
offset = Vector2(400, 0)
limit_left = -464
position_smoothing_enabled = true
script = ExtResource("2_lpb50")

[node name="texture" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.117576, 0.117794)
texture = ExtResource("1_7kgtu")

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2(0.878373, 0.878373)
shape = SubResource("CircleShape2D_ce31e")

[node name="Trail2D" parent="." instance=ExtResource("3_2c1u8")]

[node name="detectDamage" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="detectDamage"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectDamage/Area2D"]
shape = SubResource("CircleShape2D_0g4sr")

[node name="StartTime" type="Node" parent="."]
script = ExtResource("9_708a0")

[node name="StartTimer" type="Timer" parent="StartTime"]

[node name="MovementSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_hhoad")
bus = &"Wind"

[connection signal="body_entered" from="detectDamage/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="StartTime/StartTimer" to="StartTime" method="_on_start_timer_timeout"]
